Adding unit test case and some improvements to the code

--- a/ExoPlayerPlayback/playeranalytics/build.gradle
+++ b/ExoPlayerPlayback/playeranalytics/build.gradle
@@ -44,4 +44,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-inline:3.9.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+
+    testImplementation "io.mockk:mockk:1.12.4"
 }
