--- a/ExoPlayerPlayback/app/build.gradle
+++ b/ExoPlayerPlayback/app/build.gradle
@@ -60,22 +60,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.4'
 
-    // dependency for exoplayer
-    implementation 'com.google.android.exoplayer:exoplayer:2.18.2'
-
-    // for core support in exoplayer.
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.2'
-
-    // for adding dash support in our exoplayer.
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.18.2'
-
-    // for adding hls support in exoplayer.
-    implementation 'com.google.android.exoplayer:exoplayer-hls:2.18.2'
-
-    // for smooth streaming of video in our exoplayer.
-    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.18.2'
-
-    // for generating default ui of exoplayer
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.2'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-inline:3.9.0'
 }
