--- a/ExoPlayerPlayback/app/src/main/AndroidManifest.xml
+++ b/ExoPlayerPlayback/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:name=".PlayerActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:screenOrientation="landscape"
             android:theme="@style/Theme.ExoPlayerPlayback.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
